--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-    <div class="main">
+    <main class="main">
         <div class="container">
             <h1>Reliable, efficient delivery<br><span class="bold">Powered by Technology</span></h1>
             <p class="description">Our Artificial Intelligence powered tools use millions of project data points to ensure that your project is successful</p>
@@ -55,12 +55,13 @@
                 </div>
             </div>
         </div>
+    </main>
 
-        <footer>
-            <p class="attribution">
-                Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">Riccardo Z</a>.
-            </p>
-        </footer>
+    <footer>
+        <p class="attribution">
+            Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">Riccardo Z</a>.
+        </p>
+    </footer>
 </body>
 
 </html>
